@@ -3,7 +3,7 @@
       "admin" : {
          "active" : "1",
          "email" : "Admin@example.com",
-         "password" : "$2a$14$bAVgShXsvyoChS4RTFUSOul0HLgSZRZyR0Ut0Ekodaei9Sv.erOwy",
+         "password" : "$2a$14$cmEE0iEJBiF2U.Qakol0XO8Q0.SDlJr7AqxlqECwm79LoXyE4iVGS",
          "roles" : [
             "admin",
             "editor",
