@@ -1,5 +1,6 @@
 Revision history for App-Doh
 
+          - Added minimum password length
           - Admin page functional improvements
           - Improved CSS for forms
           - Upated metadata
